Minor gap fix

--- a/styles/layout/containers.scss
+++ b/styles/layout/containers.scss
@@ -146,6 +146,7 @@
   justify-content: left;
   align-items: center;
   width: fit-content;
+  gap: 1rem;
 }
 
 .flexRight {
